src/test/deca/context/invalid/created/SansObjet/NoTypeVar.deca
// Resultats:
//    Erreur contextuelle
//    Ligne 6: Error: Identifier a must have a definition

{
    a = 1;
}